# webgpu-game-of-life

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  package-lock.json  package.json  vcpkg.json
.github/workflows/: deploy.yml
src/: Life.cpp  Life.h  Shader.cpp  Shader.h  index.html  main.cpp
src/shaders/: shader.wgsl
